--- a/lab/dox/latex/class_operacja.tex
+++ b/lab/dox/latex/class_operacja.tex
@@ -37,7 +37,7 @@ void \hyperlink{class_operacja_afa1d33f2045ce668becc90b56c1b6907}{Pobierz\-Rozmi
 \begin{DoxyCompactItemize}
 \item 
 \hyperlink{classtablica}{tablica} \hyperlink{class_operacja_abf2eb42f0b32b1528939aa39e0ebd528}{tabliczka2}
-\item 
+\begin{DoxyCompactList}\small\item\em Tablica, na ktorej wykonywane sa operacje. \end{DoxyCompactList}\item 
 int \hyperlink{class_operacja_aa568b17d05f31132b3d97eb5b7e93d61}{Powtorzenia}
 \begin{DoxyCompactList}\small\item\em Pole przechowujace informiacji o ilosci powtorzen dla danej operacji. \end{DoxyCompactList}\item 
 int \hyperlink{class_operacja_a9af6bfee62f233a584f368a626e8329e}{Licznik\-Powtorzen}
@@ -177,7 +177,11 @@ Pole przechowujace informiacji o ilosci powtorzen dla danej operacji.
 \subsubsection[{tabliczka2}]{\setlength{\rightskip}{0pt plus 5cm}{\bf tablica} Operacja\-::tabliczka2}}\label{class_operacja_abf2eb42f0b32b1528939aa39e0ebd528}
 
 
+Tablica, na ktorej wykonywane sa operacje. 
+
+
+
 Dokumentacja dla tej klasy została wygenerowana z plików\-:\begin{DoxyCompactItemize}
 \item 
-C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project44\-P\-A\-M\-S\-Ilab3/\-Project44\-P\-A\-M\-S\-Ilab3/\hyperlink{operacja_8h}{operacja.\-h}\item 
-C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project44\-P\-A\-M\-S\-Ilab3/\-Project44\-P\-A\-M\-S\-Ilab3/\hyperlink{operacja_8cpp}{operacja.\-cpp}\end{DoxyCompactItemize}
+C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab4/\-Project44\-P\-A\-M\-S\-Ilab4/\hyperlink{operacja_8h}{operacja.\-h}\item 
+C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab4/\-Project44\-P\-A\-M\-S\-Ilab4/\hyperlink{operacja_8cpp}{operacja.\-cpp}\end{DoxyCompactItemize}
