--- a/lab/dox/latex/doxygen.sty
+++ b/lab/dox/latex/doxygen.sty
@@ -41,8 +41,8 @@
 \fancyhead[RO]{\fancyplain{}{\bfseries\thepage}}
 \fancyfoot[LE]{\fancyplain{}{}}
 \fancyfoot[CE]{\fancyplain{}{}}
-\fancyfoot[RE]{\fancyplain{}{\bfseries\scriptsize Wygenerowano So, 19 kwi 2014 15\-:28\-:13 dla P\-A\-M\-S\-Ilab3\-P\-O\-P\-R\-A\-W\-A programem Doxygen }}
-\fancyfoot[LO]{\fancyplain{}{\bfseries\scriptsize Wygenerowano So, 19 kwi 2014 15\-:28\-:13 dla P\-A\-M\-S\-Ilab3\-P\-O\-P\-R\-A\-W\-A programem Doxygen }}
+\fancyfoot[RE]{\fancyplain{}{\bfseries\scriptsize Wygenerowano Śr, 23 kwi 2014 14\-:06\-:04 dla P\-A\-M\-S\-Ilab4\-P\-O\-P\-R\-A\-W\-A programem Doxygen }}
+\fancyfoot[LO]{\fancyplain{}{\bfseries\scriptsize Wygenerowano Śr, 23 kwi 2014 14\-:06\-:04 dla P\-A\-M\-S\-Ilab4\-P\-O\-P\-R\-A\-W\-A programem Doxygen }}
 \fancyfoot[CO]{\fancyplain{}{}}
 \fancyfoot[RO]{\fancyplain{}{}}
 %---------- Internal commands used in this style file ----------------
