--- a/lab/dox/latex/main_8cpp.tex
+++ b/lab/dox/latex/main_8cpp.tex
@@ -1,5 +1,5 @@
-\hypertarget{main_8cpp}{\section{Dokumentacja pliku C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project44\-P\-A\-M\-S\-Ilab3/\-Project44\-P\-A\-M\-S\-Ilab3/main.cpp}
-\label{main_8cpp}\index{C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project44\-P\-A\-M\-S\-Ilab3/\-Project44\-P\-A\-M\-S\-Ilab3/main.\-cpp@{C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project44\-P\-A\-M\-S\-Ilab3/\-Project44\-P\-A\-M\-S\-Ilab3/main.\-cpp}}
+\hypertarget{main_8cpp}{\section{Dokumentacja pliku C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab4/\-Project44\-P\-A\-M\-S\-Ilab4/main.cpp}
+\label{main_8cpp}\index{C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab4/\-Project44\-P\-A\-M\-S\-Ilab4/main.\-cpp@{C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab4/\-Project44\-P\-A\-M\-S\-Ilab4/main.\-cpp}}
 }
 {\ttfamily \#include $<$iostream$>$}\\*
 {\ttfamily \#include \char`\"{}operacja.\-h\char`\"{}}\\*
@@ -27,5 +27,5 @@ W funkcji main wykonywane sa nastepujace operacje\-:
 
 \begin{DoxyItemize}
 \item Tworzony jest obiekt klasy \hyperlink{class_operacja}{Operacja}
-\item Uruchamiany jest interfejs oraz mozliwe jest wybranie algorytmu, ktory chcemy obserwowac. 
+\item Uruchamiany jest interfejs i mozliwe jest wybranie algorytmu, ktory chcemy obserwowac. 
 \end{DoxyItemize}
