--- a/lab/dox/latex/refman.tex
+++ b/lab/dox/latex/refman.tex
@@ -53,11 +53,11 @@
 \begin{titlepage}
 \vspace*{7cm}
 \begin{center}
-{\Large P\-A\-M\-S\-Ilab3\-P\-O\-P\-R\-A\-W\-A }\\
+{\Large P\-A\-M\-S\-Ilab4\-P\-O\-P\-R\-A\-W\-A }\\
 \vspace*{1cm}
 {\large Wygenerowano przez Doxygen 1.8.1.2}\\
 \vspace*{0.5cm}
-{\small So, 19 kwi 2014 15:28:14}\\
+{\small Śr, 23 kwi 2014 14:06:08}\\
 \end{center}
 \end{titlepage}
 \clearemptydoublepage
@@ -66,7 +66,7 @@
 \clearemptydoublepage
 \pagenumbering{arabic}
 \hypersetup{pageanchor=true,citecolor=blue}
-\chapter{Dokumentacja zadania P\-A\-M\-S\-I lab 3}
+\chapter{P\-O\-P\-R\-A\-W\-I\-O\-N\-A Dokumentacja zadania P\-A\-M\-S\-I lab 4}
 \label{index}\hypertarget{index}{}\input{index}
 \chapter{Indeks klas}
 \input{hierarchy}
