--- a/lab/dox/latex/tablica_8cpp.tex
+++ b/lab/dox/latex/tablica_8cpp.tex
@@ -1,9 +1,10 @@
-\hypertarget{tablica_8cpp}{\section{Dokumentacja pliku C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab4/\-Project44\-P\-A\-M\-S\-Ilab4/tablica.cpp}
-\label{tablica_8cpp}\index{C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab4/\-Project44\-P\-A\-M\-S\-Ilab4/tablica.\-cpp@{C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab4/\-Project44\-P\-A\-M\-S\-Ilab4/tablica.\-cpp}}
+\hypertarget{tablica_8cpp}{\section{Dokumentacja pliku C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab5/\-Project45\-P\-A\-M\-S\-Ilab5/tablica.cpp}
+\label{tablica_8cpp}\index{C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab5/\-Project45\-P\-A\-M\-S\-Ilab5/tablica.\-cpp@{C\-:/\-Users/\-Witek/\-Documents/\-Visual Studio 2012/\-Projects/\-Project45\-P\-A\-M\-S\-Ilab5/\-Project45\-P\-A\-M\-S\-Ilab5/tablica.\-cpp}}
 }
 {\ttfamily \#include \char`\"{}tablica.\-h\char`\"{}}\\*
 {\ttfamily \#include $<$iostream$>$}\\*
 {\ttfamily \#include $<$fstream$>$}\\*
+{\ttfamily \#include $<$ctime$>$}\\*
 \subsection*{Funkcje}
 \begin{DoxyCompactItemize}
 \item 
